接入第一批20个组件

--- a/web/src/style/variables/_custom.scss
+++ b/web/src/style/variables/_custom.scss
@@ -1,8 +1,8 @@
-$--color-background: rgba(14, 30, 103, 1);
-$--color-front: rgba(179, 173, 208, 1);
+$--color-background: #fff;
+$--color-front: #333;
 $--color-white: #fff;
 $--color-black: #000;
-$--color-primary: rgba(7, 64, 122, 1);
+$--color-primary: #409EFF;
 $--color-success: #67c23a;
 $--color-warning:  #e6a23c;
 $--color-danger: #f56c6c;
@@ -15,7 +15,7 @@ $--border-color-base: #dcdfe6;
 $--border-color-light: #e4e7ed;
 $--border-color-lighter: #ebeef5;
 $--border-color-extra-light: #f2f6fc;
-$--border-color-hover: #c0c4cc;
+$--border-color-hover: $--color-text-placeholder;
 $--background-color-base: #f5f7fa;
 $--fill-base: $--color-white;
 $--font-color-disabled-base: #bbb;
@@ -44,7 +44,7 @@ $--button-info-border-color: $--color-info;
 $--button-info-font-color: $--color-white;
 $--button-info-background-color: $--color-info;
 $--icon-color: #666;
-$--icon-color-base: rgba(13, 67, 176, 1);
+$--icon-color-base: $--color-info;
 $--checkbox-color: $--color-text-regular;
 $--checkbox-input-fill: $--color-white;
 $--checkbox-input-border-color: $--border-color-base;
