--- a/web/src/style/variables/_custom.scss
+++ b/web/src/style/variables/_custom.scss
@@ -22,6 +22,7 @@ $--font-color-disabled-base: #bbb;
 $--disabled-fill-base: $--background-color-base;
 $--disabled-color-base: $--color-text-placeholder;
 $--disabled-border-base: $--border-color-light;
+$--group-title-color: $--color-black;
 $--button-default-font-color: $--color-text-regular;
 $--button-default-background-color: $--color-white;
 $--button-default-border-color: $--border-color-base;
@@ -59,3 +60,123 @@ $--checkbox-checked-input-border-color: $--color-primary;
 $--checkbox-checked-input-fill: $--color-primary;
 $--checkbox-checked-icon-color: $--fill-base;
 $--checkbox-input-border-color-hover: $--color-primary;
+$--radio-font-color: $--color-text-regular;
+$--radio-input-background-color: $--color-white;
+$--radio-input-border-color: $--border-color-base;
+$--radio-icon-color: $--color-white;
+$--radio-disabled-input-border-color: $--disabled-border-base;
+$--radio-disabled-input-fill: $--disabled-fill-base;
+$--radio-disabled-icon-color: $--disabled-fill-base;
+$--radio-disabled-checked-input-border-color: $--disabled-border-base;
+$--radio-disabled-checked-input-fill: $--disabled-fill-base;
+$--radio-disabled-checked-icon-color: $--color-text-placeholder;
+$--radio-checked-font-color: $--color-primary;
+$--radio-checked-input-border-color: $--color-primary;
+$--radio-checked-input-background-color: $--color-white;
+$--radio-checked-icon-color: $--color-primary;
+$--radio-input-border-color-hover: $--color-primary;
+$--radio-button-checked-background-color: $--color-primary;
+$--radio-button-checked-font-color: $--color-white;
+$--radio-button-checked-border-color: $--color-primary;
+$--radio-button-disabled-checked-fill: $--border-color-extra-light;
+$--select-border-color-hover: $--border-color-hover;
+$--select-disabled-border: $--disabled-border-base;
+$--select-close-hover-color: $--color-text-secondary;
+$--select-input-color: $--color-text-placeholder;
+$--select-multiple-input-color: #666;
+$--select-input-focus-background: $--color-primary;
+$--select-option-color: $--color-text-regular;
+$--select-option-disabled-color: $--color-text-placeholder;
+$--select-option-disabled-background: $--color-white;
+$--select-option-hover-background: $--background-color-base;
+$--select-option-selected: $--color-primary;
+$--select-option-selected-hover: $--background-color-base;
+$--select-group-color: $--color-info;
+$--select-dropdown-background: $--color-white;
+$--select-dropdown-empty-color: #999;
+$--message-background-color: #edf2fc;
+$--message-content-color: $--color-text-regular;
+$--message-close-color: $--color-text-placeholder;
+$--message-close-hover-color: $--color-text-secondary;
+$--message-success-color: $--color-success;
+$--message-info-color: $--color-info;
+$--message-warning-color: $--color-warning;
+$--message-danger-color: $--color-danger;
+$--msgbox-success-color: $--color-success;
+$--msgbox-info-color: $--color-info;
+$--msgbox-warning-color: $--color-warning;
+$--msgbox-danger-color: $--color-danger;
+$--notification-border-color: $--border-color-lighter;
+$--notification-color: $--color-text-regular;
+$--notification-title-color: $--color-text-primary;
+$--notification-close-color: $--color-text-secondary;
+$--notification-close-hover-color: $--color-text-regular;
+$--notification-success-color: $--color-success;
+$--notification-info-color: $--color-info;
+$--notification-warning-color: $--color-warning;
+$--notification-danger-color: $--color-danger;
+$--input-border-color: $--border-color-base;
+$--input-border-color-hover: $--border-color-hover;
+$--input-fill: $--color-white;
+$--input-fill-disabled: $--disabled-fill-base;
+$--input-color-disabled: $--font-color-disabled-base;
+$--input-icon-color: $--color-text-placeholder;
+$--input-placeholder-color: $--color-text-placeholder;
+$--input-hover-border: $--border-color-hover;
+$--input-clear-hover-color: $--color-text-secondary;
+$--input-focus-border: $--color-primary;
+$--input-focus-fill: $--color-white;
+$--input-disabled-fill: $--disabled-fill-base;
+$--input-disabled-border: $--disabled-border-base;
+$--input-disabled-color: $--disabled-color-base;
+$--input-disabled-placeholder-color: $--color-text-placeholder;
+$--cascader-menu-fill: $--fill-base;
+$--cascader-menu-border-color: $--border-color-base;
+$--cascader-menu-color: $--color-text-regular;
+$--cascader-menu-option-color-active: $--color-text-secondary;
+$--cascader-menu-option-color-hover: $--color-text-regular;
+$--cascader-menu-option-color-disabled: #999;
+$--cascader-menu-option-empty-color: #666;
+$--cascader-menu-group-color: #999;
+$--cascader-menu-option-pinyin-color: #999;
+$--tab-header-color-active: $--color-text-secondary;
+$--tab-header-color-hover: $--color-text-regular;
+$--tab-header-color: $--color-text-regular;
+$--tab-vertical-header-count-color: $--color-white;
+$--tab-vertical-header-count-fill: $--color-text-secondary;
+$--switch-on-color: $--color-primary;
+$--switch-off-color: $--border-color-base;
+$--switch-disabled-color: $--border-color-lighter;
+$--switch-disabled-text-color: $--color-text-placeholder;
+$--dialog-background-color: $--color-white;
+$--dialog-close-hover-color: $--color-primary;
+$--table-border-color: $--border-color-lighter;
+$--table-text-color: $--color-text-regular;
+$--table-header-color: $--color-text-secondary;
+$--table-row-hover-background: $--background-color-base;
+$--table-header-background: $--color-white;
+$--table-footer-background: $--color-text-placeholder;
+$--pagination-fill: $--color-white;
+$--pagination-color: $--color-text-primary;
+$--pagination-button-color: $--color-text-primary;
+$--pagination-button-disabled-color: $--color-text-placeholder;
+$--pagination-button-disabled-fill: $--color-white;
+$--pagination-hover-fill: $--color-primary;
+$--pagination-hover-color: $--color-white;
+$--popover-fill: $--color-white;
+$--popover-border-color: $--border-color-lighter;
+$--popover-title-color: $--color-text-primary;
+$--tooltip-fill: $--color-text-primary;
+$--tooltip-color: $--color-white;
+$--tooltip-border-color: $--color-text-primary;
+$--tag-color: $--color-primary;
+$--tag-info-color: $--color-info;
+$--tag-primary-color: $--color-primary;
+$--tag-success-color: $--color-success;
+$--tag-warning-color: $--color-warning;
+$--tag-danger-color: $--color-danger;
+$--tree-node-hover-color: $--background-color-base;
+$--tree-text-color: $--color-text-regular;
+$--tree-expand-icon-color: $--color-text-placeholder;
+$--dropdown-menuItem-hover-color: $--color-primary;
+$--badge-fill: $--color-danger;
