--- a/web/src/style/variables/_custom.scss
+++ b/web/src/style/variables/_custom.scss
@@ -180,3 +180,36 @@ $--tree-text-color: $--color-text-regular;
 $--tree-expand-icon-color: $--color-text-placeholder;
 $--dropdown-menuItem-hover-color: $--color-primary;
 $--badge-fill: $--color-danger;
+$--card-border-color: $--border-color-lighter;
+$--slider-main-background-color: $--color-primary;
+$--slider-runway-background-color: $--border-color-light;
+$--slider-stop-background-color: $--color-white;
+$--slider-disable-color: $--color-text-placeholder;
+$--steps-border-color: $--disabled-border-base;
+$--menu-item-color: $--color-text-primary;
+$--menu-item-fill: $--color-white;
+$--menu-item-hover-fill: color-primary-light-9;
+$--datepicker-color: $--color-text-regular;
+$--datepicker-off-color: $--color-text-placeholder;
+$--datepicker-header-color: $--color-text-regular;
+$--datepicker-icon-color: $--color-text-primary;
+$--datepicker-border-color: $--disabled-border-base;
+$--datepicker-inner-border-color: #e4e4e4;
+$--datepicker-inrange-color: $--border-color-extra-light;
+$--datepicker-inrange-hover-color: $--border-color-extra-light;
+$--datepicker-active-color: $--color-primary;
+$--datepicker-text-hover-color: $--color-primary;
+$--datepicker-cell-hover-color: #fff;
+$--carousel-arrow-background: rgba(31, 45, 61, 0.11);
+$--carousel-arrow-hover-background: rgba(31, 45, 61, 0.23);
+$--carousel-indicator-out-color: $--border-color-hover;
+$--rate-icon-color: $--color-text-placeholder;
+$--collapse-border-color: $--border-color-lighter;
+$--collapse-header-fill: $--color-white;
+$--collapse-header-color: $--color-text-primary;
+$--collapse-content-fill: $--color-white;
+$--collapse-content-color: $--color-text-primary;
+$--transfer-border-color: $--border-color-lighter;
+$--transfer-panel-header-background: $--background-color-base;
+$--transfer-item-hover-background: $--color-text-secondary;
+$--timeline-node-color: $--border-color-light;
