--- a/web/src/style/variables/_custom.scss
+++ b/web/src/style/variables/_custom.scss
@@ -1,8 +1,8 @@
-$--color-background: #fff;
+$--color-background: rgba(235, 201, 248, 1);
 $--color-front: #333;
 $--color-white: #fff;
 $--color-black: #000;
-$--color-primary: #409EFF;
+$--color-primary: rgba(110, 2, 164, 1);
 $--color-success: #67c23a;
 $--color-warning:  #e6a23c;
 $--color-danger: #f56c6c;
@@ -94,27 +94,6 @@ $--select-option-selected-hover: $--background-color-base;
 $--select-group-color: $--color-info;
 $--select-dropdown-background: $--color-white;
 $--select-dropdown-empty-color: #999;
-$--message-background-color: #edf2fc;
-$--message-content-color: $--color-text-regular;
-$--message-close-color: $--color-text-placeholder;
-$--message-close-hover-color: $--color-text-secondary;
-$--message-success-color: $--color-success;
-$--message-info-color: $--color-info;
-$--message-warning-color: $--color-warning;
-$--message-danger-color: $--color-danger;
-$--msgbox-success-color: $--color-success;
-$--msgbox-info-color: $--color-info;
-$--msgbox-warning-color: $--color-warning;
-$--msgbox-danger-color: $--color-danger;
-$--notification-border-color: $--border-color-lighter;
-$--notification-color: $--color-text-regular;
-$--notification-title-color: $--color-text-primary;
-$--notification-close-color: $--color-text-secondary;
-$--notification-close-hover-color: $--color-text-regular;
-$--notification-success-color: $--color-success;
-$--notification-info-color: $--color-info;
-$--notification-warning-color: $--color-warning;
-$--notification-danger-color: $--color-danger;
 $--input-border-color: $--border-color-base;
 $--input-border-color-hover: $--border-color-hover;
 $--input-fill: $--color-white;
@@ -139,56 +118,14 @@ $--cascader-menu-option-color-disabled: #999;
 $--cascader-menu-option-empty-color: #666;
 $--cascader-menu-group-color: #999;
 $--cascader-menu-option-pinyin-color: #999;
-$--tab-header-color-active: $--color-text-secondary;
-$--tab-header-color-hover: $--color-text-regular;
-$--tab-header-color: $--color-text-regular;
-$--tab-vertical-header-count-color: $--color-white;
-$--tab-vertical-header-count-fill: $--color-text-secondary;
 $--switch-on-color: $--color-primary;
 $--switch-off-color: $--border-color-base;
 $--switch-disabled-color: $--border-color-lighter;
 $--switch-disabled-text-color: $--color-text-placeholder;
-$--dialog-background-color: $--color-white;
-$--dialog-close-hover-color: $--color-primary;
-$--table-border-color: $--border-color-lighter;
-$--table-text-color: $--color-text-regular;
-$--table-header-color: $--color-text-secondary;
-$--table-row-hover-background: $--background-color-base;
-$--table-header-background: $--color-white;
-$--table-footer-background: $--color-text-placeholder;
-$--pagination-fill: $--color-white;
-$--pagination-color: $--color-text-primary;
-$--pagination-button-color: $--color-text-primary;
-$--pagination-button-disabled-color: $--color-text-placeholder;
-$--pagination-button-disabled-fill: $--color-white;
-$--pagination-hover-fill: $--color-primary;
-$--pagination-hover-color: $--color-white;
-$--popover-fill: $--color-white;
-$--popover-border-color: $--border-color-lighter;
-$--popover-title-color: $--color-text-primary;
-$--tooltip-fill: $--color-text-primary;
-$--tooltip-color: $--color-white;
-$--tooltip-border-color: $--color-text-primary;
-$--tag-color: $--color-primary;
-$--tag-info-color: $--color-info;
-$--tag-primary-color: $--color-primary;
-$--tag-success-color: $--color-success;
-$--tag-warning-color: $--color-warning;
-$--tag-danger-color: $--color-danger;
-$--tree-node-hover-color: $--background-color-base;
-$--tree-text-color: $--color-text-regular;
-$--tree-expand-icon-color: $--color-text-placeholder;
-$--dropdown-menuItem-hover-color: $--color-primary;
-$--badge-fill: $--color-danger;
-$--card-border-color: $--border-color-lighter;
 $--slider-main-background-color: $--color-primary;
 $--slider-runway-background-color: $--border-color-light;
 $--slider-stop-background-color: $--color-white;
 $--slider-disable-color: $--color-text-placeholder;
-$--steps-border-color: $--disabled-border-base;
-$--menu-item-color: $--color-text-primary;
-$--menu-item-fill: $--color-white;
-$--menu-item-hover-fill: color-primary-light-9;
 $--datepicker-color: $--color-text-regular;
 $--datepicker-off-color: $--color-text-placeholder;
 $--datepicker-header-color: $--color-text-regular;
@@ -200,16 +137,83 @@ $--datepicker-inrange-hover-color: $--border-color-extra-light;
 $--datepicker-active-color: $--color-primary;
 $--datepicker-text-hover-color: $--color-primary;
 $--datepicker-cell-hover-color: #fff;
-$--carousel-arrow-background: rgba(31, 45, 61, 0.11);
-$--carousel-arrow-hover-background: rgba(31, 45, 61, 0.23);
-$--carousel-indicator-out-color: $--border-color-hover;
 $--rate-icon-color: $--color-text-placeholder;
+$--transfer-border-color: $--border-color-lighter;
+$--transfer-panel-header-background: $--background-color-base;
+$--transfer-item-hover-background: $--color-text-secondary;
+$--msgbox-success-color: $--color-success;
+$--msgbox-info-color: $--color-info;
+$--msgbox-warning-color: $--color-warning;
+$--msgbox-danger-color: $--color-danger;
+$--message-background-color: #edf2fc;
+$--message-content-color: $--color-text-regular;
+$--message-close-color: $--color-text-placeholder;
+$--message-close-hover-color: $--color-text-secondary;
+$--message-success-color: $--color-success;
+$--message-info-color: $--color-info;
+$--message-warning-color: $--color-warning;
+$--message-danger-color: $--color-danger;
+$--notification-border-color: $--border-color-lighter;
+$--notification-color: $--color-text-regular;
+$--notification-title-color: $--color-text-primary;
+$--notification-close-color: $--color-text-secondary;
+$--notification-close-hover-color: $--color-text-regular;
+$--notification-success-color: $--color-success;
+$--notification-info-color: $--color-info;
+$--notification-warning-color: $--color-warning;
+$--notification-danger-color: $--color-danger;
+$--tab-header-color-active: $--color-text-secondary;
+$--tab-header-color-hover: $--color-text-regular;
+$--tab-header-color: $--color-text-regular;
+$--tab-vertical-header-count-color: $--color-white;
+$--tab-vertical-header-count-fill: $--color-text-secondary;
+$--dropdown-menuItem-hover-color: $--color-primary;
+$--steps-border-color: $--disabled-border-base;
+$--menu-item-color: $--color-text-primary;
+$--menu-item-fill: $--color-white;
+$--menu-item-hover-fill: color-primary-light-9;
 $--collapse-border-color: $--border-color-lighter;
 $--collapse-header-fill: $--color-white;
 $--collapse-header-color: $--color-text-primary;
 $--collapse-content-fill: $--color-white;
 $--collapse-content-color: $--color-text-primary;
-$--transfer-border-color: $--border-color-lighter;
-$--transfer-panel-header-background: $--background-color-base;
-$--transfer-item-hover-background: $--color-text-secondary;
 $--timeline-node-color: $--border-color-light;
+$--table-border-color: $--border-color-lighter;
+$--table-text-color: $--color-text-regular;
+$--table-header-color: $--color-text-secondary;
+$--table-row-hover-background: $--background-color-base;
+$--table-header-background: $--color-white;
+$--table-footer-background: $--color-text-placeholder;
+$--tree-node-hover-color: $--background-color-base;
+$--tree-text-color: $--color-text-regular;
+$--tree-expand-icon-color: $--color-text-placeholder;
+$--tag-color: $--color-primary;
+$--tag-info-color: $--color-info;
+$--tag-primary-color: $--color-primary;
+$--tag-success-color: $--color-success;
+$--tag-warning-color: $--color-warning;
+$--tag-danger-color: $--color-danger;
+$--pagination-fill: $--color-white;
+$--pagination-color: $--color-text-primary;
+$--pagination-button-color: $--color-text-primary;
+$--pagination-button-disabled-color: $--color-text-placeholder;
+$--pagination-button-disabled-fill: $--color-white;
+$--pagination-hover-fill: $--color-primary;
+$--pagination-hover-color: $--color-white;
+$--badge-fill: $--color-danger;
+$--dialog-background-color: $--color-white;
+$--dialog-close-hover-color: $--color-primary;
+$--popover-fill: $--color-white;
+$--popover-border-color: $--border-color-lighter;
+$--popover-title-color: $--color-text-primary;
+$--tooltip-fill: $--color-text-primary;
+$--tooltip-color: $--color-white;
+$--tooltip-border-color: $--color-text-primary;
+$--card-border-color: $--border-color-lighter;
+$--carousel-arrow-background: rgba(31, 45, 61, 0.11);
+$--carousel-arrow-hover-background: rgba(31, 45, 61, 0.23);
+$--carousel-indicator-out-color: $--border-color-hover;
+$--msgbox-success-color: $--color-success;
+$--msgbox-info-color: $--color-info;
+$--msgbox-warning-color: $--color-warning;
+$--msgbox-danger-color: $--color-danger;
