--- a/web/src/style/variables/_custom.scss
+++ b/web/src/style/variables/_custom.scss
@@ -1,8 +1,6 @@
-$--color-background: rgba(235, 201, 248, 1);
-$--color-front: #333;
 $--color-white: #fff;
 $--color-black: #000;
-$--color-primary: rgba(110, 2, 164, 1);
+$--color-primary: #409EFF;
 $--color-success: #67c23a;
 $--color-warning:  #e6a23c;
 $--color-danger: #f56c6c;
@@ -17,6 +15,7 @@ $--border-color-lighter: #ebeef5;
 $--border-color-extra-light: #f2f6fc;
 $--border-color-hover: $--color-text-placeholder;
 $--background-color-base: #f5f7fa;
+$--link-hover-color: $--color-primary;
 $--fill-base: $--color-white;
 $--font-color-disabled-base: #bbb;
 $--disabled-fill-base: $--background-color-base;
@@ -26,6 +25,7 @@ $--group-title-color: $--color-black;
 $--button-default-font-color: $--color-text-regular;
 $--button-default-background-color: $--color-white;
 $--button-default-border-color: $--border-color-base;
+$--button-default-hover-color: $--color-primary;
 $--button-disabled-font-color: $--color-text-placeholder;
 $--button-disabled-background-color: $--color-white;
 $--button-disabled-border-color: $--border-color-lighter;
@@ -44,26 +44,33 @@ $--button-danger-background-color: $--color-danger;
 $--button-info-border-color: $--color-info;
 $--button-info-font-color: $--color-white;
 $--button-info-background-color: $--color-info;
-$--icon-color: #666;
 $--icon-color-base: $--color-info;
-$--checkbox-color: $--color-text-regular;
-$--checkbox-input-fill: $--color-white;
+$--checkbox-font-color: $--color-text-regular;
+$--checkbox-input-background-color: $--color-white;
 $--checkbox-input-border-color: $--border-color-base;
 $--checkbox-icon-color: $--color-white;
+$--checkbox-disabled-font-color: $--color-text-placeholder;
 $--checkbox-disabled-input-border-color: $--border-color-base;
 $--checkbox-disabled-input-fill: #edf2fc;
 $--checkbox-disabled-icon-color: $--color-text-placeholder;
 $--checkbox-disabled-checked-input-fill: $--border-color-extra-light;
 $--checkbox-disabled-checked-input-border-color: $--border-color-base;
-$--checkbox-checked-text-color: $--color-primary;
+$--checkbox-disabled-checked-icon-color: $--color-text-placeholder;
+$--checkbox-checked-font-color: $--color-primary;
 $--checkbox-checked-input-border-color: $--color-primary;
-$--checkbox-checked-input-fill: $--color-primary;
+$--checkbox-checked-input-background-color: $--color-primary;
 $--checkbox-checked-icon-color: $--fill-base;
+$--checkbox-button-border-color: $--border-color-base;
 $--checkbox-input-border-color-hover: $--color-primary;
+$--checkbox-button-checked-background-color: $--color-primary;
+$--checkbox-button-checked-font-color: $--color-white;
+$--checkbox-button-checked-border-color: $--color-primary;
+$--checkbox-button-disabled-border-color: $--disabled-fill-base;
 $--radio-font-color: $--color-text-regular;
 $--radio-input-background-color: $--color-white;
 $--radio-input-border-color: $--border-color-base;
 $--radio-icon-color: $--color-white;
+$--radio-disabled-font-color: $--disabled-fill-base;
 $--radio-disabled-input-border-color: $--disabled-border-base;
 $--radio-disabled-input-fill: $--disabled-fill-base;
 $--radio-disabled-icon-color: $--disabled-fill-base;
@@ -77,8 +84,10 @@ $--radio-checked-icon-color: $--color-primary;
 $--radio-input-border-color-hover: $--color-primary;
 $--radio-button-checked-background-color: $--color-primary;
 $--radio-button-checked-font-color: $--color-white;
+$--radio-button-border-color: $--border-color-base;
 $--radio-button-checked-border-color: $--color-primary;
 $--radio-button-disabled-checked-fill: $--border-color-extra-light;
+$--radio-button-disabled-border-color: $--disabled-border-base;
 $--select-border-color-hover: $--border-color-hover;
 $--select-disabled-border: $--disabled-border-base;
 $--select-close-hover-color: $--color-text-secondary;
@@ -94,14 +103,14 @@ $--select-option-selected-hover: $--background-color-base;
 $--select-group-color: $--color-info;
 $--select-dropdown-background: $--color-white;
 $--select-dropdown-empty-color: #999;
+$--select-tag-background-color: #f0f2f5;
+$--select-tag-color: $--color-text-secondary;
+$--input-font-color: $--color-text-regular;
 $--input-border-color: $--border-color-base;
-$--input-border-color-hover: $--border-color-hover;
-$--input-fill: $--color-white;
-$--input-fill-disabled: $--disabled-fill-base;
-$--input-color-disabled: $--font-color-disabled-base;
+$--input-hover-border: $--border-color-hover;
+$--input-background-color: $--color-white;
 $--input-icon-color: $--color-text-placeholder;
 $--input-placeholder-color: $--color-text-placeholder;
-$--input-hover-border: $--border-color-hover;
 $--input-clear-hover-color: $--color-text-secondary;
 $--input-focus-border: $--color-primary;
 $--input-focus-fill: $--color-white;
@@ -109,6 +118,13 @@ $--input-disabled-fill: $--disabled-fill-base;
 $--input-disabled-border: $--disabled-border-base;
 $--input-disabled-color: $--disabled-color-base;
 $--input-disabled-placeholder-color: $--color-text-placeholder;
+$--input-append-background-color: $--background-color-base;
+$--input-append-color: $--color-info;
+$--input-append-border-color: $--border-color-base;
+$--input-border-color-hover: $--border-color-hover;
+$--input-fill: $--color-white;
+$--input-fill-disabled: $--disabled-fill-base;
+$--input-color-disabled: $--font-color-disabled-base;
 $--cascader-menu-fill: $--fill-base;
 $--cascader-menu-border-color: $--border-color-base;
 $--cascader-menu-color: $--color-text-regular;
@@ -171,7 +187,6 @@ $--dropdown-menuItem-hover-color: $--color-primary;
 $--steps-border-color: $--disabled-border-base;
 $--menu-item-color: $--color-text-primary;
 $--menu-item-fill: $--color-white;
-$--menu-item-hover-fill: color-primary-light-9;
 $--collapse-border-color: $--border-color-lighter;
 $--collapse-header-fill: $--color-white;
 $--collapse-header-color: $--color-text-primary;
@@ -201,7 +216,6 @@ $--pagination-button-disabled-fill: $--color-white;
 $--pagination-hover-fill: $--color-primary;
 $--pagination-hover-color: $--color-white;
 $--badge-fill: $--color-danger;
-$--dialog-background-color: $--color-white;
 $--dialog-close-hover-color: $--color-primary;
 $--popover-fill: $--color-white;
 $--popover-border-color: $--border-color-lighter;
@@ -213,7 +227,5 @@ $--card-border-color: $--border-color-lighter;
 $--carousel-arrow-background: rgba(31, 45, 61, 0.11);
 $--carousel-arrow-hover-background: rgba(31, 45, 61, 0.23);
 $--carousel-indicator-out-color: $--border-color-hover;
-$--msgbox-success-color: $--color-success;
-$--msgbox-info-color: $--color-info;
-$--msgbox-warning-color: $--color-warning;
-$--msgbox-danger-color: $--color-danger;
+$--widgets-layout-split-color: $--color-info;
+$--widgets-layout-split-color-hover: $--color-info;
