--- a/web/src/style/variables/_custom.scss
+++ b/web/src/style/variables/_custom.scss
@@ -229,3 +229,5 @@ $--carousel-arrow-hover-background: rgba(31, 45, 61, 0.23);
 $--carousel-indicator-out-color: $--border-color-hover;
 $--widgets-layout-split-color: $--color-info;
 $--widgets-layout-split-color-hover: $--color-info;
+$--widgets-calendar-border-color: $--border-color-base;
+$--widgets-calendar-disabled-color: $--disabled-color-base;
