--- a/web/src/style/variables/_widgets.scss
+++ b/web/src/style/variables/_widgets.scss
@@ -5,3 +5,10 @@ $--widgets-layout-split-background-color: $--color-primary-light-8 !default;
 $--widgets-layout-split-background-color-hover: $--color-primary-light-9 !default;
 $--widgets-layout-split-color: $--color-info !default;
 $--widgets-layout-split-color-hover: $--color-info !default;
+
+// calendar
+$--widgets-calendar-border-color: $--border-color-base !default;
+$--widgets-calendar-disabled-color: $--disabled-color-base !default;
+$--widgets-calendar-hover-background-color: $--color-primary-light-9 !default;
+$--widgets-calendar-active-background-color: $--color-primary-light-8 !default;
+
