--- a/web/src/style/index.scss
+++ b/web/src/style/index.scss
@@ -1,5 +1,6 @@
 // 通用基础样式
 @import "base";
+@import "../assets/icons/iconfont.css";
 @import "scrollbar";
 @import "element";
 @import "widgets/index";
