--- a/web/src/style/widgets/chart-card.scss
+++ b/web/src/style/widgets/chart-card.scss
@@ -1,3 +1,5 @@
+@import "../vars";
+
 .xdh-chart-card {
   &__header {
     display: flex;
@@ -9,11 +11,11 @@
     word-break: break-all;
     font-size: 28px;
     line-height: 38px;
-    color: rgba(0, 0, 0, .85);
+    color: $--color-text-primary;
   }
 
   &__footer {
-    border-top: 1px solid #e8e8e8;
+    border-top: 1px solid $--border-color-light;
     padding-top: 9px;
     margin-top: 8px;
   }
