--- a/web/src/style/widgets/list.scss
+++ b/web/src/style/widgets/list.scss
@@ -1,3 +1,5 @@
+@import "../vars";
+
 $xdhList: '.xdh-list';
 
 //@alert-prefix-cls: ~"@{css-prefix}alert";
@@ -9,12 +11,12 @@ $xdhList: '.xdh-list';
   /*显示边框*/
   &--bordered {
     border-radius: 4px;
-    border: 1px solid #d9d9d9;
+    border: 1px solid $--border-color-lighter;
   }
 
   &__item {
     @at-root #{$xdhList}--split & {
-      border-bottom: 1px solid #e8e8e8;
+      border-bottom: 1px solid $--border-color-lighter;
       &:last-child {
         border-bottom: 0;
       }
