--- a/web/src/style/variables/_custom.scss
+++ b/web/src/style/variables/_custom.scss
@@ -1,26 +1,26 @@
-$--color-white: #fff;
+$--color-white: rgba(36, 73, 156, 1);
 $--color-black: #000;
-$--color-primary: #409EFF;
+$--color-primary: rgba(55, 123, 193, 1);
 $--color-success: #67c23a;
 $--color-warning:  #e6a23c;
 $--color-danger: #f56c6c;
 $--color-info: #909399;
-$--color-text-primary: #303133;
-$--color-text-regular: #606266;
-$--color-text-secondary: #909399;
-$--color-text-placeholder: #c0c4cc;
-$--border-color-base: #dcdfe6;
-$--border-color-light: #e4e7ed;
-$--border-color-lighter: #ebeef5;
-$--border-color-extra-light: #f2f6fc;
+$--color-text-primary: rgba(225, 232, 247, 1);
+$--color-text-regular: rgba(187, 207, 247, 1);
+$--color-text-secondary: rgba(166, 183, 215, 1);
+$--color-text-placeholder: rgba(103, 135, 198, 1);
+$--border-color-base: rgba(133, 155, 207, 1);
+$--border-color-light: rgba(173, 189, 220, 1);
+$--border-color-lighter: rgba(200, 211, 237, 1);
+$--border-color-extra-light: rgba(234, 237, 242, 1);
 $--border-color-hover: $--color-text-placeholder;
-$--background-color-base: #f5f7fa;
+$--background-color-base: rgba(55, 98, 164, 1);
 $--link-hover-color: $--color-primary;
 $--fill-base: $--color-white;
 $--font-color-disabled-base: #bbb;
-$--disabled-fill-base: $--background-color-base;
-$--disabled-color-base: $--color-text-placeholder;
-$--disabled-border-base: $--border-color-light;
+$--disabled-fill-base: rgba(58, 96, 152, 1);
+$--disabled-color-base: rgba(94, 115, 156, 1);
+$--disabled-border-base: rgba(102, 124, 169, 1);
 $--group-title-color: $--color-black;
 $--button-default-font-color: $--color-text-regular;
 $--button-default-background-color: $--color-white;
