--- a/web/src/style/variables/_default.scss
+++ b/web/src/style/variables/_default.scss
@@ -1,4 +1,3 @@
-
 $--color-background: #fff !default;
 $--color-front: #333 !default;
 $--font-path: '~element-ui/lib/theme-chalk/fonts';
@@ -6,7 +5,8 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 //------------ 字体
 $--font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
 
-/* Element Chalk Variables */
+//start
+  /* Element Chalk Variables */
 
 // Special comment for theme configurator
 // type|skipAutoTranslation|Category|Order
@@ -14,12 +14,12 @@ $--font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", 
 
 /* Transition
 -------------------------- */
-$--all-transition: all .3s cubic-bezier(.645, .045, .355, 1) !default;
+$--all-transition: all .3s cubic-bezier(.645,.045,.355,1) !default;
 $--fade-transition: opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) !default;
 $--fade-linear-transition: opacity 200ms linear !default;
 $--md-fade-transition: transform 300ms cubic-bezier(0.23, 1, 0.32, 1), opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) !default;
-$--border-transition-base: border-color .2s cubic-bezier(.645, .045, .355, 1) !default;
-$--color-transition-base: color .2s cubic-bezier(.645, .045, .355, 1) !default;
+$--border-transition-base: border-color .2s cubic-bezier(.645,.045,.355,1) !default;
+$--color-transition-base: color .2s cubic-bezier(.645,.045,.355,1) !default;
 
 /* Color
 -------------------------- */
@@ -220,6 +220,8 @@ $--checkbox-button-checked-background-color: $--color-primary !default;
 $--checkbox-button-checked-font-color: $--color-white !default;
 /// color||Color|0
 $--checkbox-button-checked-border-color: $--color-primary !default;
+
+
 
 /* Radio
 -------------------------- */
@@ -581,6 +583,7 @@ $--button-info-background-color: $--color-info !default;
 $--button-hover-tint-percent: 20% !default;
 $--button-active-shade-percent: 10% !default;
 
+
 /* cascader
 -------------------------- */
 $--cascader-height: 200px !default;
@@ -606,7 +609,7 @@ $--switch-button-size: 16px !default;
 
 /* Dialog
 -------------------------- */
-$--dialog-background-color: $--color-primary-light-4 !default;
+$--dialog-background-color: $--color-white !default;
 $--dialog-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3) !default;
 $--dialog-close-hover-color: $--color-primary !default;
 $--dialog-title-font-size: $--font-size-large !default;
@@ -885,14 +888,15 @@ $--breakpoints: (
 $--breakpoints-spec: (
   'xs-only' : (max-width: $--sm - 1),
   'sm-and-up' : (min-width: $--sm),
-  'sm-only': "(min-width: #{$--sm}) and (max-width: #{$--md} - 1)",
+  'sm-only': "(min-width: #{$--sm}) and (max-width: #{$--md - 1})",
   'sm-and-down': (max-width: $--md - 1),
   'md-and-up' : (min-width: $--md),
-  'md-only': "(min-width: #{$--md}) and (max-width: #{$--lg } - 1)",
+  'md-only': "(min-width: #{$--md}) and (max-width: #{$--lg - 1})",
   'md-and-down': (max-width: $--lg - 1),
   'lg-and-up' : (min-width: $--lg),
-  'lg-only': "(min-width: #{$--lg}) and (max-width: #{$--xl } - 1)",
+  'lg-only': "(min-width: #{$--lg}) and (max-width: #{$--xl - 1})",
   'lg-and-down': (max-width: $--xl - 1),
   'xl-only' : (min-width: $--xl),
 );
 
+//end
